--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ APP_URL=http://local.time-keeper.com
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=time-keeper
+DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
